# lino_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Battery.msg  Fiducial.msg  FiducialArray.msg  FiducialMapEntry.msg  FiducialMapEntryArray.msg
