<?xml version="1.0"?>
<package>
  <name>robotec_msgs</name>
  <version>1.0.0</version>
  <description>The package contains custom ROS messages for Robotec projects.</description>

  <maintainer email="jimenojmm@gmail.com">Juan Jimeno</maintainer>
  <maintainer email="illya.shvarov@gmail.com">Illia Shvarov</maintainer>

  <url type="website">http://www.robotec.ua</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
